# LAB7_MAI-OOP-LABS-cpp-2025

./: .gitignore  Dockerfile  README.md  docker-compose.yml
lab7_var19/: CMakeLists.txt
lab7_var19/include/: battle_rules.h  npc.h  npc_factory.h  world.h
lab7_var19/src/: battle_rules.cpp  main.cpp  npc.cpp  npc_factory.cpp  world.cpp
lab7_var19/tests/: test_all.cpp
